--- a/app/views/learn/index.html.erb
+++ b/app/views/learn/index.html.erb
@@ -17,15 +17,16 @@
 
 <div ng-controller="IndexCtrl">
 
-  <h1>{{title}}</h1>
+<h1>Example 1 - Angular binding</h1>
+  <h2>{{title}}</h2>
 
-  <h1>{{1+2}}</h1>
+  <h3>{{1+2}}</h3>
 
-  {{instructor.first}} {{instructor.last}}
+	Using ng-bind:  <h1 ng-bind ="instructor.first + ' ' + instructor.last "></h1>
+	Using curly braces: <h1>{{instructor.first}} {{instructor.last}}</h1>
 
-<br>
-<br>
 
+<h1>Example 2 - ng-style</h1>
    	<input type="button" value="set color" ng-click="myStyle={color:'red'}">
    	<input type="button" value="set background" ng-click="myStyle={background:'red'}">
 		<input type="button" value="clear" ng-click="myStyle={}">
@@ -34,6 +35,7 @@
 <br>
 <br>
 
+<h1>Example 3 - ng-show and ng-hide</h1>
 <input type="checkbox" ng-model = "checked" id = "check"> <label for="check">Show text?</label>
 
 <br>
@@ -47,27 +49,31 @@
 </div>
 
 <br>
+<h1>Example 4 - more ng-model and ng-hide</h1>
 <label for="naming">Name:</label>
 <input type="text" ng-model = "name" id = "naming" >
 <div ng-hide = "showName">
-	Hello, {{name || "world"}}!
+	Hello, <span ng-bind ="name || 'world'"></span>
 </div>
 
 <br>
+<h1>Example 5 ng-repeat</h1>
 <h2>Here are my colorful friends!</h2>
 <div ng-repeat = "friend in friends">
 	<span ng-style = "{color: '{{friend.style}}'} ">{{friend.name}}</span><br>
 </div>
 
+<h1>Example 6 ng-style and ng-model</h1>
 <h2>Type in your favorite color</h2>
 <input type="text" ng-model="favoriteColor">
- <h1 ng-style="{color: favoriteColor || 'purple'}">This must be your favorite color!</h1>
+ <h3 ng-style="{color: favoriteColor || 'purple'}">This must be your favorite color!</h3>
 
-
+<h1>Example 7 ng-model and ng-list</h1>
 <h2>Let's take a look at ng-list!</h2>
-<input ng-model="names" ng-list='/[- | ]/'>
+<input ng-model="names" ng-list='/[-|,|\s]/'>
 {{names}}
 
+<h1>Example 8 - $watch and ng-hide</h1>
 <div class = "magic" ng-hide = "removed">
 <br>
 	Let's see if you know the password...
@@ -77,7 +83,7 @@
 </div>
 <h3>{{notice}}</h3>
 
-<h1>Counter with styling example: </h1>
+<h1>Example 9 -Counter with styling example + ng-click</h1>
 
 <p ng-class = "{'over': value >0, 'under' : value <0}">
 	<span class="val">{{value}}</span>
@@ -91,22 +97,22 @@
 	Subtract One
 </button>
 
-
-<h1>  We have {{books.length}}
+<h1>Example 10 - ng-pluralize, ng-repeat, ng-submit, filters</h1>
+<h3>  We have {{books.length}}
   <ng-pluralize count = "books.length" when ="{'1' : 'book', 'other' : 'books'}">
   </ng-pluralize>
-</h1>
+</h3>
 
 	<p style = "color:red"; ng-if = "books.length ==0"> Sorry we're all out!</p>
   <div ng-if = "books.length > 0">
+
   	Search through our catalog here:
 
   <input type="search" ng-model="search" placeholder="filter books..." />
   	<br>
-	<!-- {{books}} -->
   	<ul ng-repeat = "book in books | filter:search | orderBy: '-rating' | limitTo: 5">
-		<!-- Re-ordered index - {{$index}} -->
-		<!-- Actual index - {{books.indexOf(book)}} -->
+		Re-ordered index - {{$index}}
+		Actual index - {{books.indexOf(book)}}
   		<li>
   			{{book.title | makeUppercase}}
   		</li>
@@ -127,7 +133,7 @@
   	</ul>
 
 </div>
-
+<h1>Example 11</h1>
 <form action="javascript:void(0);" ng-submit="add()">
 <p>
 	<label for="title">Title</label>	<input type="text" id="title" ng-model = "new_title">
